--- a/index.css
+++ b/index.css
@@ -68,7 +68,7 @@ button:hover{
 #time-container{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
